crates/memtrack/tests/snapshots/rss_tests__rss_shmem.snap
---
source: crates/memtrack/tests/rss_tests.rs
expression: summary
---
{
  "report": {
    "MaxRssKb:": 64,
    "RssAnon:": 0,
    "RssFile:": 0,
    "RssShmem:": 64
  },
  "rss_stat": [
    {
      "pid": "[pid]",
      "file_mib": 0,
      "anon_mib": 0,
      "shmem_mib": 64,
      "max_rss_mib": 64
    }
  ],
  "rmap": [
    {
      "pid": "[pid]",
      "file_mib": 0,
      "anon_mib": 0,
      "shmem_mib": 64,
      "max_rss_mib": 64
    }
  ]
}
